--- a/docs/INSTALL.txt
+++ b/docs/INSTALL.txt
@@ -1,40 +1,16 @@
 organs Installation
 ------------------------------------
 
-To install organs into the global Python environment (or a workingenv),
-using a traditional Zope 2 instance, you can do this:
-
-* When you're reading this you have probably already run
-  ``easy_install organs``. Find out how to install setuptools
-  (and EasyInstall) here:
-  http://peak.telecommunity.com/DevCenter/EasyInstall
-
-* If you are using Zope 2.9 (not 2.10), get `pythonproducts`_ and install it
-  via::
-
-    python setup.py install --home /path/to/instance
-
-into your Zope instance.
-
-* Create a file called ``organs-configure.zcml`` in the
-  ``/path/to/instance/etc/package-includes`` directory.  The file
-  should only contain this::
-
-    <include package="organs" />
-
-.. _pythonproducts: http://plone.org/products/pythonproducts
-
-
-Alternatively, if you are using zc.buildout and the plone.recipe.zope2instance
+If you are using zc.buildout and the plone.recipe.zope2instance
 recipe to manage your project, you can do this:
 
-* Add ``organs`` to the list of eggs to install, e.g.:
+* Add ``genweb.organs`` to the list of eggs to install, e.g.:
 
     [buildout]
     ...
     eggs =
         ...
-        organs
+        genweb.organs
 
 * Tell the plone.recipe.zope2instance recipe to install a ZCML slug:
 
@@ -42,7 +18,7 @@ recipe to manage your project, you can do this:
     recipe = plone.recipe.zope2instance
     ...
     zcml =
-        organs
+        genweb.organs
 
 * Re-run buildout, e.g. with:
 
