--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2017-04-03 15:14+0000\n"
+"POT-Creation-Date: 2017-04-03 15:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,7 +20,7 @@ msgstr "<p>Esborrany Yellow</p><p>Pendent d'aprovació Orange</p><p>Aprovat Gree
 
 #: ./genweb/organs/browser/views.py:404
 #: ./genweb/organs/content/impersonate_as.py:141
-#: ./genweb/organs/content/presentation.py:51
+#: ./genweb/organs/content/punt.py:146
 msgid "ACORD"
 msgstr "ACORD"
 
@@ -922,6 +922,14 @@ msgstr "Enllaç al vídeo de la sessió"
 #: ./genweb/organs/content/templates/informar_view.pt:42
 msgid "Vista previa dels punts"
 msgstr "Vista prèvia dels punts informatius"
+
+#: ./genweb/organs/content/presentation.py:51
+msgid "[ACORD]"
+msgstr "[ACORD]"
+
+#: ./genweb/organs/content/presentation.py:49
+msgid "[Acord "
+msgstr "[Acord "
 
 #: ./genweb/organs/content/templates/acord_view.pt:20
 #: ./genweb/organs/content/templates/punt+subpunt_view.pt:78
