--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.po
@@ -2,17 +2,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: genweb\n"
 "POT-Creation-Date: 2016-12-19 15:30+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2017-04-20 13:16+0200\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "Language-Code: ca\n"
 "Language-Name: Catalan\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: genweb\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ca\n"
+"X-Generator: Poedit 1.8.7.1\n"
 
 msgid "obert"
 msgstr "Obert"
