--- a/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2017-04-20 15:26+0000\n"
+"POT-Creation-Date: 2017-04-23 22:30+0000\n"
 "PO-Revision-Date: 2017-04-20 14:05+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -16,12 +16,15 @@ msgstr ""
 "Language: es\n"
 "X-Generator: Poedit 1.8.7.1\n"
 
+#: ./genweb/organs/content/informarSessio.py:232
+msgid " [Acord sense numeracio]"
+msgstr " [Acuerdo sin numeración]"
+
 #: ./genweb/organs/content/organgovern.py:25
 msgid "<p>Esborrany Yellow</p><p>Pendent d'aprovació Orange</p><p>Aprovat Green</p><p>No aprovat Red</p><p>Derogat DarkRed</p><p>Informatiu LightSkyBlue</p><p>Informat MediumBlue</p>"
 msgstr "<p>Borrador Yellow</p><p>Pendiente de aprobación Orange</p><p>Aprobado Green</p><p>No aprobado Red</p><p>Derogado DarkRed</p><p>Informativo LightSkyBlue</p><p>Informado MediumBlue</p>"
 
-#: ./genweb/organs/browser/views.py:408
-#: ./genweb/organs/content/impersonate_as.py:144
+#: ./genweb/organs/content/impersonate_as.py:181
 #: ./genweb/organs/content/punt.py:146
 msgid "ACORD"
 msgstr "ACUERDO"
@@ -38,6 +41,10 @@ msgstr "Acuerdo"
 #: ./genweb/organs/content/acord.py:66
 msgid "Acord Title"
 msgstr "Título"
+
+#: ./genweb/organs/content/impersonate_as.py:144
+msgid "Acord sense numeracio"
+msgstr "Acuerdo sin numeración"
 
 #: ./genweb/organs/content/organgovern.py:60
 msgid "Acronym"
@@ -196,7 +203,7 @@ msgstr "Se han guardado los cambios."
 
 #: ./genweb/organs/content/templates/impersonate_as.pt:28
 msgid "Cliqueu <a href=\"./\">aqui</a> per tornar al mode de visualitzacio per defecte."
-msgstr ""
+msgstr "Click <a href=\"./\">aquí</a> para volver al modo de visualización por defecto."
 
 #: ./genweb/organs/content/templates/organgovern_view.pt:40
 msgid "Composicio"
@@ -294,7 +301,7 @@ msgstr "Estado de la sesión"
 
 #: ./genweb/organs/content/templates/impersonate_as.pt:26
 msgid "Esteu visualitzant la sessio amb el rol"
-msgstr ""
+msgstr "Estáis visualizando la sesión con el rol"
 
 #: ./genweb/organs/browser/views/acta_print.pt:78
 #: ./genweb/organs/content/acta.py:73
@@ -382,7 +389,7 @@ msgstr "Convocados"
 msgid "Incoming members list help"
 msgstr "Lista de nombres de los miembros convocados. Inicialmente son los miembros que componen el órgano."
 
-#: ./genweb/organs/browser/viewlets_templates/header.pt:42
+#: ./genweb/organs/browser/viewlets_templates/header.pt:41
 msgid "Info_del_Servei"
 msgstr "Consultar la información en Serveis TIC"
 
@@ -939,13 +946,14 @@ msgstr "Enlace al video de la sesión"
 msgid "Vista previa dels punts"
 msgstr "Vista previa de los puntos informativos"
 
-#: ./genweb/organs/content/presentation.py:54
-msgid "[ACORD]"
-msgstr "[ACUERDO]"
-
 #: ./genweb/organs/content/presentation.py:52
 msgid "[Acord "
 msgstr "[Acuerdo "
+
+#: ./genweb/organs/content/acta.py:188
+#: ./genweb/organs/content/presentation.py:54
+msgid "[Acord sense numeracio]"
+msgstr "[Acuerdo sin numeración]"
 
 #: ./genweb/organs/content/templates/acord_view.pt:17
 #: ./genweb/organs/content/templates/punt+subpunt_view.pt:81
@@ -991,6 +999,7 @@ msgstr "Direcciones a las que llegan los mensajes relativos a la sesión. Inicia
 msgid "printOrdreDia"
 msgstr "Imprimir orden del día"
 
+#: ./genweb/organs/browser/views.py:408
 #: ./genweb/organs/content/sessio.py:324
 msgid "sense numeracio"
-msgstr ""
+msgstr "sin numeración"
