--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.po
@@ -1,62 +1,48 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: genweb\n"
-"POT-Creation-Date: 2016-12-19 15:30+0000\n"
-"PO-Revision-Date: 2017-04-20 13:16+0200\n"
+"Project-Id-Version: GenWebUPC\n"
+"POT-Creation-Date: 2014-12-16 10:30+0000\n"
+"PO-Revision-Date: 2014-12-16 12:19+0100\n"
+"Last-Translator: Roberto Diaz <roberto.diaz@upcnet.es>\n"
+"Language-Team: Plone Team@UPCnet <plone.team@upcnet.es>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 "Language-Code: ca\n"
 "Language-Name: Catalan\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: genweb\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Language: ca\n"
-"X-Generator: Poedit 1.8.7.1\n"
 
-msgid "obert"
-msgstr "Obert"
+msgid "ConvocarSessio"
+msgstr "Convoca sessió"
 
-msgid "open"
-msgstr "Obrir"
+msgid "ModificarSessio"
+msgstr "Modifica sessió"
 
-msgid "restricted_affected"
-msgstr "Restringit a afectats"
+msgid "PlanificarSessio"
+msgstr "Planifica sessió"
 
-msgid "restrict_to_affected"
-msgstr "Restringir a afectats"
+msgid "RealitzarSessio"
+msgstr "Dóna per realitzada"
 
-msgid "restricted_members"
-msgstr "Restringit a membres"
+msgid "TancarSessio"
+msgstr "Tanca sessió"
 
-msgid "restrict_to_members"
-msgstr "Restringir a membres"
+msgid "ConvocantSessio"
+msgstr "Convoca sessió"
 
-msgid "tancada"
-msgstr "Tancada"
+msgid "SessioTancada"
+msgstr "Sessió tancada"
 
-msgid "convocada"
-msgstr "Convocada"
+msgid "SessioEnModificacio"
+msgstr "Sessió en modificació"
 
-msgid "planificada"
-msgstr "En planificació"
+msgid "SessioEnPlanificacio"
+msgstr "Sessió en planificació"
 
-msgid "en_correccio"
-msgstr "En modificació"
+msgid "SessioConvocada"
+msgstr "Sessió convocada"
 
-msgid "realitzada"
-msgstr "Realitzada"
-
-msgid "corregir"
-msgstr "Modificar"
-
-msgid "realitzar"
-msgstr "Realitzar"
-
-msgid "convocar"
-msgstr "Convocar"
-
-msgid "tancar"
-msgstr "Tancar"
+msgid "SessioRealitzada"
+msgstr "Sessió realitzada"
