--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.po
@@ -1,16 +1,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: GenWebUPC\n"
-"POT-Creation-Date: 2014-12-16 10:30+0000\n"
-"PO-Revision-Date: 2014-12-16 12:19+0100\n"
+"POT-Creation-Date: 2017-04-24 10:30+0000\n"
+"PO-Revision-Date: 2017-04-24 18:10+0200\n"
 "Last-Translator: Roberto Diaz <roberto.diaz@upcnet.es>\n"
 "Language-Team: Plone Team@UPCnet <plone.team@upcnet.es>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0\n"
-"Language-Code: ca\n"
-"Language-Name: Catalan\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: genweb\n"
 
@@ -46,3 +44,18 @@ msgstr "Sessió convocada"
 
 msgid "SessioRealitzada"
 msgstr "Sessió realitzada"
+
+msgid "convocada"
+msgstr "Convocada"
+
+msgid "realitzada"
+msgstr "Realitzada"
+
+msgid "tancada"
+msgstr "Tancada"
+
+msgid "planificada"
+msgstr "En planificació"
+
+msgid "en_correccio"
+msgstr "En modificació"
