--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
@@ -277,7 +277,7 @@ msgstr "Literals i colors que es faran servir com a estats d'aprovació dels pun
 
 #: ./genweb/organs/content/organgovern.py:102
 msgid "Enter the from used in the mail form"
-msgstr "Adreça de correu del remitent de les notificacions (persona o grup) de l'òrgan. Es poden posar diverses adreces separades per comes o espais en blanc."
+msgstr "Adreça de correu del remitent de les notificacions (persona o grup) de l'òrgan."
 
 #: ./genweb/organs/content/templates/sessio_view.pt:332
 msgid "Envia"
