--- a/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
@@ -245,7 +245,7 @@ msgstr "Se ha creado una acta."
 
 #: ./genweb/organs/hooks.py:30
 msgid "Created punt"
-msgstr "Se ha creado un punto informativo."
+msgstr "Se ha creado un punto."
 
 #: ./genweb/organs/content/templates/acta_view.pt:62
 #: ./genweb/organs/content/templates/impersonate_as.pt:36
@@ -270,11 +270,11 @@ msgstr "Elemento eliminado"
 
 #: ./genweb/organs/browser/events/removeObject.py:40
 msgid "Deleted punt"
-msgstr "Punto informativo eliminado"
+msgstr "Punto eliminado"
 
 #: ./genweb/organs/browser/events/removeObject.py:79
 msgid "Deleted subpunt"
-msgstr "Punto informativo eliminado"
+msgstr "Punto eliminado"
 
 #: ./genweb/organs/content/templates/acta_view.pt:157
 msgid "Desenvolupament de la sessio"
@@ -520,7 +520,7 @@ msgstr "Se ha modificado una acta."
 
 #: ./genweb/organs/hooks.py:78
 msgid "Modified punt"
-msgstr "Se ha modificado un punto informativo."
+msgstr "Se ha modificado un punto."
 
 #: ./genweb/organs/content/templates/organgovern_view.pt:32
 msgid "Mostrar dades de organ"
@@ -563,7 +563,7 @@ msgstr "Añade acuerdo"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:321
 msgid "Nou punt"
-msgstr "Añade punto informativo"
+msgstr "Añade punto"
 
 #: ./genweb/organs/profiles/default/sharing.xml
 msgid "OG1-Secretari"
@@ -709,7 +709,7 @@ msgstr "Previsualizar el acta"
 
 #: ./genweb/organs/content/templates/informar_view.pt:31
 msgid "Previsualitzacio dels punts"
-msgstr "Previsualizar los puntos informativos"
+msgstr "Previsualizar puntos"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:149
 msgid "Print"
@@ -729,7 +729,7 @@ msgstr "Contenido"
 #: ./genweb/organs/content/punt.py:66
 #: ./genweb/organs/content/subpunt.py:63
 msgid "Proposal point number"
-msgstr "Punto informativo del orden del día"
+msgstr "Punto del orden del día"
 
 #: ./genweb/organs/content/file.py:59
 msgid "Published file description"
@@ -738,7 +738,7 @@ msgstr " Fichero que contiene la parte pública del documento. Ha de ser en form
 #: ./genweb/organs/browser/views/butlleti.pt:99
 #: ./genweb/organs/profiles/default/types/genweb.organs.punt.xml
 msgid "Punt"
-msgstr "Punto informativo"
+msgstr "Punto"
 
 #: ./genweb/organs/content/punt.py:60
 msgid "Punt Title"
@@ -848,7 +848,7 @@ msgstr "Acta"
 
 #: ./genweb/organs/content/acta.py:98
 msgid "Session order description"
-msgstr " Apartado para indicar los puntos informativos del orden del día y el desarrollo de la sesión."
+msgstr "Apartado para indicar los puntos del orden del día y el desarrollo de la sesión."
 
 #: ./genweb/organs/content/templates/organgovern_view.pt:92
 msgid "Session start"
@@ -896,15 +896,15 @@ msgstr "Estado"
 #: ./genweb/organs/content/templates/sessio_view.pt:422
 #: ./genweb/organs/profiles/default/types/genweb.organs.subpunt.xml
 msgid "Subpunt"
-msgstr "Punto informativo"
+msgstr "Punto"
 
 #: ./genweb/organs/content/subpunt.py:57
 msgid "Subpunt Title"
-msgstr "Título del punto informativo del orden del día"
+msgstr "Título del punto del orden del día"
 
 #: ./genweb/organs/content/templates/punt+subpunt_view.pt:67
 msgid "Subpunts informatius / acords"
-msgstr "Puntos informativos y/o acuerdos"
+msgstr "Puntos y/o acuerdos"
 
 #: ./genweb/organs/content/acord.py:61
 msgid "Tab acord"
@@ -932,11 +932,11 @@ msgstr "Órgano"
 
 #: ./genweb/organs/content/punt.py:54
 msgid "Tab punt"
-msgstr "Punto informativo"
+msgstr "Punto"
 
 #: ./genweb/organs/content/subpunt.py:51
 msgid "Tab subpunt"
-msgstr "Punto informativo"
+msgstr "Punto"
 
 #: ./genweb/organs/content/templates/acta_view.pt:45
 #: ./genweb/organs/content/templates/informar_view.pt:37
@@ -975,7 +975,7 @@ msgstr "Enlace al video de la sesión"
 
 #: ./genweb/organs/content/templates/informar_view.pt:42
 msgid "Vista previa dels punts"
-msgstr "Vista previa de los puntos informativos"
+msgstr "Vista previa de los puntos"
 
 #: ./genweb/organs/content/presentation.py:52
 msgid "[Acord "
